[project]
name = "pagerduty_mcp_server"
version = "v3.1.4"
description = "MCP server for LLM agents to interact with PagerDuty SaaS"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Will Pfleger", email = "wpfleger@block.xyz" }
]
keywords = ["pagerduty", "mcp", "llm", "api", "server"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "hatch>=1.14.1",
    "fastmcp>=2.5.1",
    "pagerduty>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/wpfleger96/pagerduty-mcp-server"
Repository = "https://github.com/wpfleger96/pagerduty-mcp-server.git"
Documentation = "https://github.com/wpfleger96/pagerduty-mcp-server#readme"
"Bug Tracker" = "https://github.com/wpfleger96/pagerduty-mcp-server/issues"
Changelog = "https://github.com/wpfleger96/pagerduty-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
pagerduty-mcp-server = "pagerduty_mcp_server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
branch = "main"
commit_parser = "conventional"
commit_message = "chore(release): {version}"
allow_zero_version = true

[tool.semantic_release.commit_parser_opts]
allowed_types = ["feat", "fix", "chore", "ci", "docs", "style", "refactor", "test"]

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"

[dependency-groups]
development = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
