[project]
name = "pagerduty_mcp_server"
version = "5.0.0"
description = "MCP server for LLM agents to interact with PagerDuty SaaS"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Will Pfleger", email = "pfleger.will@gmail.com" }
]
keywords = ["pagerduty", "mcp", "llm", "api", "server"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3",
    "keyring>=24.0.0",
    "pagerduty>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
]

[project.urls]
Homepage = "https://github.com/wpfleger96/pagerduty-mcp-server"
Repository = "https://github.com/wpfleger96/pagerduty-mcp-server.git"
Documentation = "https://github.com/wpfleger96/pagerduty-mcp-server#readme"
"Bug Tracker" = "https://github.com/wpfleger96/pagerduty-mcp-server/issues"
Changelog = "https://github.com/wpfleger96/pagerduty-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
pagerduty-mcp-server = "pagerduty_mcp_server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=8.3.5,<10",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.2",
    "types-requests>=2.32.0",
]

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"
files = ["src/"]

[[tool.mypy.overrides]]
module = "pagerduty.*"
follow_imports = "skip"

[tool.setuptools.package-data]
pagerduty_mcp_server = ["docs/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"
